--- a/test/GPS.SettingsSyncTests/GPS.SettingsSyncTests.csproj
+++ b/test/GPS.SettingsSyncTests/GPS.SettingsSyncTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,16 +7,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
-    <PackageReference Include="coverlet.collector" Version="1.0.1" />
+    <PackageReference Include="GPS.RandomDataGenerator" Version="1.1.4" />
+    <PackageReference Include="GPS.RandomDataGenerator.BaseData" Version="1.1.4" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
+    <PackageReference Include="coverlet.collector" Version="1.2.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\GPS.SettingsSync\GPS.SettingsSync.csproj" />
+    <ProjectReference Include="..\..\src\GPS.SettingsSync.FilePersistence.Yaml\GPS.SettingsSync.FilePersistence.Yaml.csproj" />
+    <ProjectReference Include="..\..\src\GPS.SettingsSync.FilePersistence\GPS.SettingsSync.FilePersistence.csproj" />
+    <ProjectReference Include="..\..\src\GPS.SettingsSync\GPS.SettingsSync.Core.csproj" />
   </ItemGroup>
 
 </Project>
