Ready for 1.0 release once I've integrated GitHub Actions and other deployment related stuff.

--- a/src/GPS.SettingsSync.FilePersistence.Yaml/GPS.SettingsSync.FilePersistence.Yaml.csproj
+++ b/src/GPS.SettingsSync.FilePersistence.Yaml/GPS.SettingsSync.FilePersistence.Yaml.csproj
@@ -3,6 +3,19 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
+    <Authors>The Sharp Ninja</Authors>
+    <Company>Gateway Programming School, Inc.</Company>
+    <Product>GPS Settings Sync YAML Provider</Product>
+    <Copyright>&amp;copy; 2020 - Gateway Programming School, Inc.</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/gatewayprogrammingschool/GPS.SettingsSync</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>roaming, settings, dotnet, dotnetcore, uwp, roaming-settings</PackageTags>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Title>GPS Settings Sync YAML Provider</Title>
+    <Description>Allow create of local and roaming settings in YAML format.</Description>
+    <PackageProjectUrl>https://github.com/gatewayprogrammingschool/GPS.SettingsSync</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
