--- a/src/GPS.SettingsSync.FilePersistence/GPS.SettingsSync.FilePersistence.csproj
+++ b/src/GPS.SettingsSync.FilePersistence/GPS.SettingsSync.FilePersistence.csproj
@@ -1,8 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
+    <Authors>The Sharp Ninja</Authors>
+    <Company>Gateway Programming School, Inc.</Company>
+    <Product>GPS Settings Sync File Providers</Product>
+    <Copyright>&amp;copy; 2020 - Gateway Programming School, Inc.</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/gatewayprogrammingschool/GPS.SettingsSync</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>roaming, settings, dotnet, dotnetcore, uwp, roaming-settings</PackageTags>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Title>GPS Settings Sync File Providers</Title>
+    <Description>Allow create of local and roaming settings in Binary, XML or JSON format.</Description>
+    <PackageProjectUrl>https://github.com/gatewayprogrammingschool/GPS.SettingsSync</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
