--- a/.github/workflows/dotnetcore2.yml
+++ b/.github/workflows/dotnetcore2.yml
@@ -1,17 +1,89 @@
 name: .NET Core
 
-on: [push]
+on:
+  release:
+    types: [created, edited]
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 2.2.108
-    - name: Build with dotnet
-      run: dotnet build --configuration Release
+      - uses: actions/checkout@v1
+        with:
+          repo-token: ${{ secrets.GitHubRepositoryToken }}
+
+        # Prepare Container
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.1.101
+
+        # Perform Build
+      - name: Build with dotnet
+        run: dotnet build src/GPS.SettingsSync.sln --configuration Debug --disable-parallel
+
+        # Perform Testing
+      - name: Test with dotnet
+        run: dotnet test test/GPS.SettingsSyncTests.sln --configuration Debug --no-build
+
+  publish:
+    needs: [build]
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@v1
+        with:
+          repo-token: ${{ secrets.GitHubRepositoryToken }}
+
+        # Prepare Container
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.1.101
+
+      - name: Setup GitVersion
+        run: choco install gitversion.portable -pre -y
+
+      - name: Execute GitVersion
+        run: |
+          Set-Location src
+          gitversion /l console /output buildserver /updateAssemblyInfo /exec 
+
+      - name: Build & Pack Core
+        run: |
+          Set-Location src
+          dotnet build GPS.SettingsSync\GPS.SettingsSync.Core.csproj --configuration Release --disable-parallel
+          dotnet pack GPS.SettingsSync\GPS.SettingsSync.Core.csproj --configuration Release --no-build --no-restore
+
+      - name: Build & Pack Data
+        run: |
+          Set-Location src
+          dotnet build GPS.SettingsSync.FilePersistence\GPS.SettingsSync.FilePersistence.csproj --configuration Release --disable-parallel
+          dotnet pack GPS.SettingsSync.FilePersistence\GPS.SettingsSync.FilePersistence.csproj --configuration Release --no-build --no-restore
+
+      - name: Build & Pack Library
+        run: |
+          Set-Location src
+          dotnet build GPS.SettingsSync.FilePersistence.Yaml\GPS.SettingsSync.FilePersistence.Yaml.csproj --configuration Release --disable-parallel
+          dotnet pack GPS.SettingsSync.FilePersistence.Yaml\GPS.SettingsSync.FilePersistence.Yaml.csproj --configuration Release --no-build --no-restore
+
+        # Publish the packages
+      - name: Publish to GitHub Repository
+        shell: powershell
+        run: |
+          $ghSource = "https://nuget.pkg.github.com/gatewayprogrammingschool/"            
+          $ngSource = "https://api.nuget.org/v3/index.json"
+
+          Get-ChildItem packages/*.nupkg | ForEach-Object -Process {
+            Write-Host "Processing" $_.FullName
+            dotnet nuget push $_.FullName --api-key ${{ secrets.GitHubRepositoryToken }} --source $ghSource --skip-duplicate
+            dotnet nuget push $_.FullName --api-key ${{ secrets.NugetRepositoryToken }} --source $ngSource --skip-duplicate
+          }
+
+        # Hold onto artifacts from the build.
+      - name: Upload artifact
+        uses: actions/upload-artifact@v1.0.0
+        with:
+          name: GPS.SettingsSync
+          path: packages
