--- a/.github/workflows/dotnetcore2.yml
+++ b/.github/workflows/dotnetcore2.yml
@@ -25,7 +25,7 @@ jobs:
 
         # Perform Testing
       - name: Test with dotnet
-        run: dotnet test test/GPS.SettingsSyncTests.sln --configuration Debug --no-build
+        run: dotnet test test/GPS.SettingsSyncTests.csproj --configuration Debug --no-build
 
   publish:
     needs: [build]
